--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ header > p {
     color: white;
     max-width: 600px;
     margin: auto;
-    padding-bottom: 0px 10px 50px 10px;
+    padding: 0px 10px 50px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
 }
 
